# timeseries-simp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/tssimp/: cli.py  generators.py  time_series.py
